# CAEditor

./: CMakeLists.txt  README.md  canvas.cpp  canvas.h  highlighter.cpp  highlighter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
automata/: gosper.json  lifegame.scm  lifegame_debug.scm  random.json  random.scm  wireworld.scm  wireworld_demo.json  wireworld_zeros.json  zeros.json
